--- a/19 Agosto/Esercizio 2/es2_prova.ipynb
+++ b/19 Agosto/Esercizio 2/es2_prova.ipynb
@@ -5,19 +5,7 @@
    "execution_count": 1,
    "id": "6aa59725",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'sklearn'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mModuleNotFoundError\u001b[39m                       Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[1]\u001b[39m\u001b[32m, line 3\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;66;03m# Setup iniziale con i vari import da sfruttare per i due svolgimenti separati\u001b[39;00m\n\u001b[32m      2\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mpandas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mpd\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m3\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01msklearn\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mmodel_selection\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m train_test_split\n\u001b[32m      4\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01msklearn\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mtree\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m DecisionTreeClassifier\n\u001b[32m      5\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01msklearn\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mneural_network\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m MLPClassifier\n",
-      "\u001b[31mModuleNotFoundError\u001b[39m: No module named 'sklearn'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Setup iniziale con i vari import da sfruttare per i due svolgimenti separati\n",
     "import pandas as pd\n",
@@ -30,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "ea9b39d6",
    "metadata": {},
    "outputs": [],
@@ -39,20 +27,39 @@
     "# Kaggle \"DOM_hourly\": columns => [\"Datetime\", \"DOM_MW\"]\n",
     "df = pd.read_csv(\"DOM_hourly.csv\", parse_dates=[\"Datetime\"])\n",
     "# Forziamo che la colonna 'Datetime' sia in formato datetime\n",
-    "df['Datetime'] = pd.to_datetime(df['Datetime'])"
+    "df['Datetime'] = pd.to_datetime(df['Datetime'])\n",
+    "df.set_index('Datetime', inplace=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "06d013a0",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Feature engineering\n",
-    "df[\"hour\"] = df[\"Datetime\"].dt.hour\n",
-    "df[\"dayofweek\"] = df[\"Datetime\"].dt.dayofweek\n",
-    "df[\"month\"] = df[\"Datetime\"].dt.month"
+    "df[\"hour\"] = df.index.hour\n",
+    "df[\"dayofweek\"] = df.index.dayofweek\n",
+    "df[\"month\"] = df.index.month"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "d4bed935",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Calcolo delle varie medie, settimanale, mensile e globale\n",
+    "media_settimanale = df['DOM_MW'].resample('W').mean()\n",
+    "media_mensile = df['DOM_MW'].resample('ME').mean()\n",
+    "media_globale = df['DOM_MW'].mean()\n",
+    "\n",
+    "# Aggiungere le medie al DataFrame\n",
+    "df['Media_Settimanale'] = media_settimanale.reindex(df.index).ffill()\n",
+    "df['Media_Mensile'] = media_mensile.reindex(df.index).ffill()\n",
+    "df['Media_Globale'] = media_globale"
    ]
   },
   {
