--- a/19 Agosto/Esercizio 2/es2_prova.ipynb
+++ b/19 Agosto/Esercizio 2/es2_prova.ipynb
@@ -72,11 +72,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "13aeabdf",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                      DOM_MW  Media_Settimanale  Media_Mensile  Media_Globale  \\\n",
+      "Datetime                                                                        \n",
+      "2005-12-31 01:00:00   9389.0                NaN            NaN   10949.203625   \n",
+      "2005-12-31 02:00:00   9070.0                NaN            NaN   10949.203625   \n",
+      "2005-12-31 03:00:00   9001.0                NaN            NaN   10949.203625   \n",
+      "2005-12-31 04:00:00   9042.0                NaN            NaN   10949.203625   \n",
+      "2005-12-31 05:00:00   9132.0                NaN            NaN   10949.203625   \n",
+      "...                      ...                ...            ...            ...   \n",
+      "2018-01-01 20:00:00  18418.0          17920.625   13873.676075   10949.203625   \n",
+      "2018-01-01 21:00:00  18567.0          17920.625   13873.676075   10949.203625   \n",
+      "2018-01-01 22:00:00  18307.0          17920.625   13873.676075   10949.203625   \n",
+      "2018-01-01 23:00:00  17814.0          17920.625   13873.676075   10949.203625   \n",
+      "2018-01-02 00:00:00  17428.0          17920.625   13873.676075   10949.203625   \n",
+      "\n",
+      "                         Classificazione_Pandas  \n",
+      "Datetime                                         \n",
+      "2005-12-31 01:00:00               basso consumo  \n",
+      "2005-12-31 02:00:00               basso consumo  \n",
+      "2005-12-31 03:00:00               basso consumo  \n",
+      "2005-12-31 04:00:00               basso consumo  \n",
+      "2005-12-31 05:00:00               basso consumo  \n",
+      "...                                         ...  \n",
+      "2018-01-01 20:00:00  alto consumo (settimanale)  \n",
+      "2018-01-01 21:00:00  alto consumo (settimanale)  \n",
+      "2018-01-01 22:00:00  alto consumo (settimanale)  \n",
+      "2018-01-01 23:00:00      alto consumo (mensile)  \n",
+      "2018-01-02 00:00:00      alto consumo (mensile)  \n",
+      "\n",
+      "[116189 rows x 5 columns]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Classifica il consumo in base alla media settimanale, mensile e globale\n",
+    "def classificazione(consumo, media_settimanale, media_mensile, media_globale):\n",
+    "    if consumo > media_settimanale:\n",
+    "        return 'alto consumo (settimanale)'\n",
+    "    elif consumo > media_mensile:\n",
+    "        return 'alto consumo (mensile)'\n",
+    "    elif consumo > media_globale:\n",
+    "        return 'alto consumo (globale)'\n",
+    "    else:\n",
+    "        return 'basso consumo'\n",
+    "\n",
+    "df['Classificazione_Pandas'] = df.apply(lambda row: classificazione(row['DOM_MW'], row['Media_Settimanale'], row['Media_Mensile'], row['Media_Globale']), axis=1)\n",
+    "\n",
+    "# Visualizza il risultato\n",
+    "print(df[['DOM_MW', 'Media_Settimanale', 'Media_Mensile', 'Media_Globale', 'Classificazione_Pandas']])"
+   ]
   },
   {
    "cell_type": "markdown",
