--- a/19 Agosto/Esercizio 2/es2_prova.ipynb
+++ b/19 Agosto/Esercizio 2/es2_prova.ipynb
@@ -140,17 +140,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "f8cb9b34",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Decision Tree:\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0      0.758     0.839     0.796     14524\n",
+      "           1      0.820     0.732     0.773     14524\n",
+      "\n",
+      "    accuracy                          0.785     29048\n",
+      "   macro avg      0.789     0.785     0.785     29048\n",
+      "weighted avg      0.789     0.785     0.785     29048\n",
+      "\n",
+      "Neural Network:\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0      0.841     0.753     0.794     14524\n",
+      "           1      0.776     0.857     0.815     14524\n",
+      "\n",
+      "    accuracy                          0.805     29048\n",
+      "   macro avg      0.809     0.805     0.805     29048\n",
+      "weighted avg      0.809     0.805     0.805     29048\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# Target binario: 1 se consumo sopra la mediana\n",
-    "df[\"target\"] = (df[\"AEP_MW\"] > df[\"AEP_MW\"].median()).astype(int)\n",
+    "df[\"target_median\"] = (df[\"DOM_MW\"] > df[\"DOM_MW\"].median()).astype(int)\n",
     "\n",
     "# #### Selezione delle feature\n",
     "X = df[[\"hour\", \"dayofweek\", \"month\"]]\n",
-    "y = df[\"target\"]\n",
+    "y = df[\"target_median\"]\n",
     "\n",
     "# #### Split del dataset\n",
     "X_train, X_test, y_train, y_test = train_test_split(\n",
