--- a/19 Agosto/Esercizio 2/es2_prova.ipynb
+++ b/19 Agosto/Esercizio 2/es2_prova.ipynb
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "f8cb9b34",
    "metadata": {},
    "outputs": [
@@ -172,14 +172,35 @@
     }
    ],
    "source": [
-    "# Target binario: 1 se consumo sopra la mediana\n",
+    "# Target binario: 1 se consumo sopra mediana, media settimanale, mensile e globale\n",
     "df[\"target_median\"] = (df[\"DOM_MW\"] > df[\"DOM_MW\"].median()).astype(int)\n",
+    "df[\"target_settimanale\"] = (df[\"DOM_MW\"] > df[\"Media_Settimanale\"]).astype(int)\n",
+    "df[\"target_mensile\"] = (df[\"DOM_MW\"] > df[\"Media_Mensile\"]).astype(int)\n",
+    "df[\"target_globale\"] = (df[\"DOM_MW\"] > df[\"Media_Globale\"]).astype(int)\n",
     "\n",
-    "# #### Selezione delle feature\n",
+    "# #### Selezione delle feature con le varie targets\n",
     "X = df[[\"hour\", \"dayofweek\", \"month\"]]\n",
     "y = df[\"target_median\"]\n",
+    "y_settimanale = df[\"target_settimanale\"]\n",
+    "y_mensile = df[\"target_mensile\"]\n",
+    "y_globale = df[\"target_globale\"]\n",
     "\n",
-    "# #### Split del dataset\n",
+    "# #### Split del dataset per mediana\n",
+    "X_train, X_test, y_train, y_test = train_test_split(\n",
+    "    X, y, stratify=y, test_size=0.25, random_state=42\n",
+    ")\n",
+    "\n",
+    "# #### Split del dataset per media settimanale\n",
+    "X_train_week, X_test_week, y_train_week, y_test_week = train_test_split(\n",
+    "    X, y, stratify=y, test_size=0.25, random_state=42\n",
+    ")\n",
+    "\n",
+    "# #### Split del dataset per media mensile\n",
+    "X_train, X_test, y_train, y_test = train_test_split(\n",
+    "    X, y, stratify=y, test_size=0.25, random_state=42\n",
+    ")\n",
+    "\n",
+    "# #### Split del dataset per media globale\n",
     "X_train, X_test, y_train, y_test = train_test_split(\n",
     "    X, y, stratify=y, test_size=0.25, random_state=42\n",
     ")\n",
