--- a/20 Agosto/clustering.ipynb
+++ b/20 Agosto/clustering.ipynb
@@ -856,13 +856,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 37,
    "id": "ae34b1aa",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Feature rispetto alla quale raggruppare i clienti\n",
-    "X = data[[\"Annual Income (k$)\", 'Spending Score (1-100)']]"
+    "X = data[['Annual Income (k$)', 'Spending Score (1-100)']]"
    ]
   },
   {
@@ -875,7 +875,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 38,
    "id": "cc009600",
    "metadata": {},
    "outputs": [
@@ -888,6 +888,13 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Optimal k (Elbow): 5\n"
+     ]
     }
    ],
    "source": [
@@ -907,13 +914,13 @@
     "optimal_k = 5\n",
     "plt.axvline(optimal_k, color='red', linestyle='--', label=f'k ottimale = {optimal_k}')\n",
     "plt.legend()\n",
-    "\n",
-    "plt.show()"
+    "plt.show()\n",
+    "print(f\"Optimal k (Elbow): {optimal_k}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 39,
    "id": "88d5d468",
    "metadata": {},
    "outputs": [
@@ -936,7 +943,6 @@
     }
    ],
    "source": [
-    "X = data[[\"Annual Income (k$)\", \"Spending Score (1-100)\"]]\n",
     "silhouette_scores = []\n",
     "K = range(2, 11)  # Silhouette non è definito per k=1\n",
     "\n",
@@ -971,7 +977,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 40,
    "id": "37113fc4",
    "metadata": {},
    "outputs": [],
@@ -984,7 +990,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 41,
    "id": "b5a0e846",
    "metadata": {},
    "outputs": [
@@ -996,6 +1002,46 @@
          "name": "Clusters",
          "rawType": "int32",
          "type": "integer"
+        },
+        {
+         "name": "('Age', 'count')",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "('Age', 'mean')",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "('Age', 'std')",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "('Age', 'min')",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "('Age', '25%')",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "('Age', '50%')",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "('Age', '75%')",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "('Age', 'max')",
+         "rawType": "float64",
+         "type": "float"
         },
         {
          "name": "('Annual Income (k$)', 'count')",
@@ -1078,10 +1124,18 @@
          "type": "float"
         }
        ],
-       "ref": "7f9eeebc-665f-47f2-8f98-dca4ee6ca220",
+       "ref": "c2e39be8-5a99-458d-bb3e-5dbaa8327719",
        "rows": [
         [
          "0",
+         "81.0",
+         "42.71604938271605",
+         "16.447822475863813",
+         "18.0",
+         "27.0",
+         "46.0",
+         "54.0",
+         "70.0",
          "81.0",
          "55.2962962962963",
          "8.988109429190942",
@@ -1102,6 +1156,14 @@
         [
          "1",
          "39.0",
+         "32.69230769230769",
+         "3.7286504271783327",
+         "27.0",
+         "30.0",
+         "32.0",
+         "35.5",
+         "40.0",
+         "39.0",
          "86.53846153846153",
          "16.312484972924963",
          "69.0",
@@ -1120,6 +1182,14 @@
         ],
         [
          "2",
+         "22.0",
+         "25.272727272727273",
+         "5.2570299253821675",
+         "18.0",
+         "21.25",
+         "23.5",
+         "29.75",
+         "35.0",
          "22.0",
          "25.727272727272727",
          "7.566730552584204",
@@ -1140,6 +1210,14 @@
         [
          "3",
          "35.0",
+         "41.114285714285714",
+         "11.341675953992786",
+         "19.0",
+         "34.0",
+         "42.0",
+         "47.5",
+         "59.0",
+         "35.0",
          "88.2",
          "16.399067405334545",
          "70.0",
@@ -1159,6 +1237,14 @@
         [
          "4",
          "23.0",
+         "45.21739130434783",
+         "13.228607161407057",
+         "19.0",
+         "35.5",
+         "46.0",
+         "53.5",
+         "67.0",
+         "23.0",
          "26.304347826086957",
          "7.893811054517766",
          "15.0",
@@ -1177,7 +1263,7 @@
         ]
        ],
        "shape": {
-        "columns": 16,
+        "columns": 24,
         "rows": 5
        }
       },
@@ -1204,7 +1290,8 @@
        "  <thead>\n",
        "    <tr>\n",
        "      <th></th>\n",
-       "      <th colspan=\"8\" halign=\"left\">Annual Income (k$)</th>\n",
+       "      <th colspan=\"8\" halign=\"left\">Age</th>\n",
+       "      <th colspan=\"5\" halign=\"left\">Annual Income (k$)</th>\n",
        "      <th colspan=\"8\" halign=\"left\">Spending Score (1-100)</th>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1215,6 +1302,11 @@
        "      <th>min</th>\n",
        "      <th>25%</th>\n",
        "      <th>50%</th>\n",
+       "      <th>75%</th>\n",
+       "      <th>max</th>\n",
+       "      <th>count</th>\n",
+       "      <th>mean</th>\n",
+       "      <th>...</th>\n",
        "      <th>75%</th>\n",
        "      <th>max</th>\n",
        "      <th>count</th>\n",
@@ -1244,17 +1336,27 @@
        "      <th></th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>81.0</td>\n",
+       "      <td>42.716049</td>\n",
+       "      <td>16.447822</td>\n",
+       "      <td>18.0</td>\n",
+       "      <td>27.00</td>\n",
+       "      <td>46.0</td>\n",
+       "      <td>54.00</td>\n",
+       "      <td>70.0</td>\n",
+       "      <td>81.0</td>\n",
        "      <td>55.296296</td>\n",
-       "      <td>8.988109</td>\n",
-       "      <td>39.0</td>\n",
-       "      <td>48.00</td>\n",
-       "      <td>54.0</td>\n",
+       "      <td>...</td>\n",
        "      <td>62.00</td>\n",
        "      <td>76.0</td>\n",
        "      <td>81.0</td>\n",
@@ -1269,11 +1371,16 @@
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>39.0</td>\n",
+       "      <td>32.692308</td>\n",
+       "      <td>3.728650</td>\n",
+       "      <td>27.0</td>\n",
+       "      <td>30.00</td>\n",
+       "      <td>32.0</td>\n",
+       "      <td>35.50</td>\n",
+       "      <td>40.0</td>\n",
+       "      <td>39.0</td>\n",
        "      <td>86.538462</td>\n",
-       "      <td>16.312485</td>\n",
-       "      <td>69.0</td>\n",
-       "      <td>75.50</td>\n",
-       "      <td>79.0</td>\n",
+       "      <td>...</td>\n",
        "      <td>95.00</td>\n",
        "      <td>137.0</td>\n",
        "      <td>39.0</td>\n",
@@ -1288,11 +1395,16 @@
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>22.0</td>\n",
+       "      <td>25.272727</td>\n",
+       "      <td>5.257030</td>\n",
+       "      <td>18.0</td>\n",
+       "      <td>21.25</td>\n",
+       "      <td>23.5</td>\n",
+       "      <td>29.75</td>\n",
+       "      <td>35.0</td>\n",
+       "      <td>22.0</td>\n",
        "      <td>25.727273</td>\n",
-       "      <td>7.566731</td>\n",
-       "      <td>15.0</td>\n",
-       "      <td>19.25</td>\n",
-       "      <td>24.5</td>\n",
+       "      <td>...</td>\n",
        "      <td>32.25</td>\n",
        "      <td>39.0</td>\n",
        "      <td>22.0</td>\n",
@@ -1307,11 +1419,16 @@
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>35.0</td>\n",
+       "      <td>41.114286</td>\n",
+       "      <td>11.341676</td>\n",
+       "      <td>19.0</td>\n",
+       "      <td>34.00</td>\n",
+       "      <td>42.0</td>\n",
+       "      <td>47.50</td>\n",
+       "      <td>59.0</td>\n",
+       "      <td>35.0</td>\n",
        "      <td>88.200000</td>\n",
-       "      <td>16.399067</td>\n",
-       "      <td>70.0</td>\n",
-       "      <td>77.50</td>\n",
-       "      <td>85.0</td>\n",
+       "      <td>...</td>\n",
        "      <td>97.50</td>\n",
        "      <td>137.0</td>\n",
        "      <td>35.0</td>\n",
@@ -1326,11 +1443,16 @@
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>23.0</td>\n",
+       "      <td>45.217391</td>\n",
+       "      <td>13.228607</td>\n",
+       "      <td>19.0</td>\n",
+       "      <td>35.50</td>\n",
+       "      <td>46.0</td>\n",
+       "      <td>53.50</td>\n",
+       "      <td>67.0</td>\n",
+       "      <td>23.0</td>\n",
        "      <td>26.304348</td>\n",
-       "      <td>7.893811</td>\n",
-       "      <td>15.0</td>\n",
-       "      <td>19.50</td>\n",
-       "      <td>25.0</td>\n",
+       "      <td>...</td>\n",
        "      <td>33.00</td>\n",
        "      <td>39.0</td>\n",
        "      <td>23.0</td>\n",
@@ -1344,50 +1466,62 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
+       "<p>5 rows × 24 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "         Annual Income (k$)                                                  \\\n",
-       "                      count       mean        std   min    25%   50%    75%   \n",
-       "Clusters                                                                      \n",
-       "0                      81.0  55.296296   8.988109  39.0  48.00  54.0  62.00   \n",
-       "1                      39.0  86.538462  16.312485  69.0  75.50  79.0  95.00   \n",
-       "2                      22.0  25.727273   7.566731  15.0  19.25  24.5  32.25   \n",
-       "3                      35.0  88.200000  16.399067  70.0  77.50  85.0  97.50   \n",
-       "4                      23.0  26.304348   7.893811  15.0  19.50  25.0  33.00   \n",
+       "           Age                                                        \\\n",
+       "         count       mean        std   min    25%   50%    75%   max   \n",
+       "Clusters                                                               \n",
+       "0         81.0  42.716049  16.447822  18.0  27.00  46.0  54.00  70.0   \n",
+       "1         39.0  32.692308   3.728650  27.0  30.00  32.0  35.50  40.0   \n",
+       "2         22.0  25.272727   5.257030  18.0  21.25  23.5  29.75  35.0   \n",
+       "3         35.0  41.114286  11.341676  19.0  34.00  42.0  47.50  59.0   \n",
+       "4         23.0  45.217391  13.228607  19.0  35.50  46.0  53.50  67.0   \n",
        "\n",
-       "                Spending Score (1-100)                                    \\\n",
-       "            max                  count       mean        std   min   25%   \n",
-       "Clusters                                                                   \n",
-       "0          76.0                   81.0  49.518519   6.530909  34.0  44.0   \n",
-       "1         137.0                   39.0  82.128205   9.364489  63.0  74.5   \n",
-       "2          39.0                   22.0  79.363636  10.504174  61.0  73.0   \n",
-       "3         137.0                   35.0  17.114286   9.952154   1.0  10.0   \n",
-       "4          39.0                   23.0  20.913043  13.017167   3.0   9.5   \n",
+       "         Annual Income (k$)             ...                \\\n",
+       "                      count       mean  ...    75%    max   \n",
+       "Clusters                                ...                 \n",
+       "0                      81.0  55.296296  ...  62.00   76.0   \n",
+       "1                      39.0  86.538462  ...  95.00  137.0   \n",
+       "2                      22.0  25.727273  ...  32.25   39.0   \n",
+       "3                      35.0  88.200000  ...  97.50  137.0   \n",
+       "4                      23.0  26.304348  ...  33.00   39.0   \n",
        "\n",
-       "                             \n",
-       "           50%    75%   max  \n",
-       "Clusters                     \n",
-       "0         50.0  55.00  61.0  \n",
-       "1         83.0  90.00  97.0  \n",
-       "2         77.0  85.75  99.0  \n",
-       "3         16.0  23.50  39.0  \n",
-       "4         17.0  33.50  40.0  "
+       "         Spending Score (1-100)                                          \\\n",
+       "                          count       mean        std   min   25%   50%   \n",
+       "Clusters                                                                  \n",
+       "0                          81.0  49.518519   6.530909  34.0  44.0  50.0   \n",
+       "1                          39.0  82.128205   9.364489  63.0  74.5  83.0   \n",
+       "2                          22.0  79.363636  10.504174  61.0  73.0  77.0   \n",
+       "3                          35.0  17.114286   9.952154   1.0  10.0  16.0   \n",
+       "4                          23.0  20.913043  13.017167   3.0   9.5  17.0   \n",
+       "\n",
+       "                       \n",
+       "            75%   max  \n",
+       "Clusters               \n",
+       "0         55.00  61.0  \n",
+       "1         90.00  97.0  \n",
+       "2         85.75  99.0  \n",
+       "3         23.50  39.0  \n",
+       "4         33.50  40.0  \n",
+       "\n",
+       "[5 rows x 24 columns]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# visualizzazione clusters\n",
-    "data.groupby(\"Clusters\")[[\"Annual Income (k$)\", 'Spending Score (1-100)']].describe()"
+    "data.groupby(\"Clusters\")[['Age', \"Annual Income (k$)\", 'Spending Score (1-100)']].describe()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 42,
    "id": "d8cd4ea5",
    "metadata": {},
    "outputs": [
@@ -1397,22 +1531,22 @@
      "text": [
       "          Annual Income (k$)  Spending Score (1-100)\n",
       "Clusters                                            \n",
-      "0                  55.296296               49.518519\n",
-      "1                  86.538462               82.128205\n",
-      "2                  25.727273               79.363636\n",
-      "3                  88.200000               17.114286\n",
-      "4                  26.304348               20.913043\n"
+      "0                         76                      61\n",
+      "1                        137                      97\n",
+      "2                         39                      99\n",
+      "3                        137                      39\n",
+      "4                         39                      40\n"
      ]
     }
    ],
    "source": [
-    "cluster_summary = data.groupby(\"Clusters\")[[\"Annual Income (k$)\", \"Spending Score (1-100)\"]].mean()\n",
+    "cluster_summary = data.groupby(\"Clusters\")[[\"Annual Income (k$)\", \"Spending Score (1-100)\"]].max()\n",
     "print(cluster_summary)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 43,
    "id": "33422616",
    "metadata": {},
    "outputs": [
@@ -1454,7 +1588,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 44,
    "id": "7d4158e3",
    "metadata": {},
    "outputs": [
@@ -1466,7 +1600,7 @@
       "Cluster ad alto potenziale (somma reddito + score):\n",
       "          Annual Income (k$)  Spending Score (1-100)  potenziale\n",
       "Clusters                                                        \n",
-      "1                  86.538462               82.128205  168.666667\n"
+      "1                        137                      97         234\n"
      ]
     }
    ],
