--- a/21 Agosto/04 - Prompt Engineering avanzato.ipynb
+++ b/21 Agosto/04 - Prompt Engineering avanzato.ipynb
@@ -285,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "5cedf2e7-03d7-4d54-b79a-24879154cef9",
    "metadata": {},
    "outputs": [
@@ -3404,9 +3404,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:base] *",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "conda-base-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -3418,7 +3418,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.13.7"
   }
  },
  "nbformat": 4,
